// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Import Profile - Processing import > should enter password again 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="mx-auto max-w-xl"
        data-testid="ImportError"
      >
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while importing the profile, try importing again. Select Retry to re-import the profile. If the error occurs again, you can contact our support team.
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="flex flex-grow items-center space-x-4"
              >
                <div
                  class="css-1atxdzc"
                  height="40"
                  width="40"
                >
                  <svg
                    id="extension-wwe"
                    viewBox="0 0 40 40"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                      fill="none"
                      stroke="#289548"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                      />
                      <path
                        d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                      />
                      <path
                        d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
                      />
                    </g>
                  </svg>
                </div>
                <div
                  class="w-0 flex-1 truncate font-semibold"
                >
                  export
                </div>
              </div>
              <div
                class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-danger-200 text-theme-danger-500"
              >
                <div
                  class="css-15txs7d"
                  height="10"
                  width="10"
                >
                  <svg
                    id="cross-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 9l8-8M9 9L1 1"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-p1y4tm"
        >
          <button
            class="css-6419sw"
            data-testid="ImportError__cancel"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Cancel
            </div>
          </button>
          <button
            class="css-fl4fi0"
            data-testid="ImportError__retry"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Retry
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should handle import error 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name test.wwe is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="mx-auto max-w-xl"
        data-testid="ImportError"
      >
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while importing the profile, try importing again. Select Retry to re-import the profile. If the error occurs again, you can contact our support team.
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="flex flex-grow items-center space-x-4"
              >
                <div
                  class="css-1atxdzc"
                  height="40"
                  width="40"
                >
                  <svg
                    id="extension-wwe"
                    viewBox="0 0 40 40"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                      fill="none"
                      stroke="#289548"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                      />
                      <path
                        d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                      />
                      <path
                        d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
                      />
                    </g>
                  </svg>
                </div>
                <div
                  class="w-0 flex-1 truncate font-semibold"
                >
                  test.wwe
                </div>
              </div>
              <div
                class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-danger-200 text-theme-danger-500"
              >
                <div
                  class="css-15txs7d"
                  height="10"
                  width="10"
                >
                  <svg
                    id="cross-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 9l8-8M9 9L1 1"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-gu3ikl"
        >
          <button
            class="css-6419sw"
            data-testid="ImportError__cancel"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Cancel
            </div>
          </button>
          <button
            class="css-fl4fi0"
            data-testid="ImportError__retry"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Retry
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should not run import process if file is not provided 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name  is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    />
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should require password for password-protected profile import 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
      >
        <div
          class="flex items-center justify-between space-x-4"
        >
          <div
            class="flex flex-grow items-center space-x-4"
          >
            <div
              class="css-1atxdzc"
              height="40"
              width="40"
            >
              <svg
                id="extension-wwe"
                viewBox="0 0 40 40"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                  fill="none"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                  />
                  <path
                    d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                  />
                  <path
                    d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
                  />
                </g>
              </svg>
            </div>
            <div
              class="w-0 flex-1 truncate font-semibold"
            >
              export
            </div>
          </div>
          <div
            class="css-1ppx3l2"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should show error if json import has an error 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="mx-auto max-w-xl"
        data-testid="ImportError"
      >
        <div
          class="flex flex-col overflow-hidden rounded-xl mt-6"
        >
          <div
            class="css-6pjap5"
          >
            <div
              class="css-v0ob3f"
              height="16"
              width="16"
            >
              <svg
                id="circle-cross"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M7 13l6-6M13 13L7 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
            <span>
              Error
            </span>
          </div>
          <div
            class="css-1y2ht9o"
          >
            An error occurred while importing the profile, try importing again. Select Retry to re-import the profile. If the error occurs again, you can contact our support team.
          </div>
        </div>
        <div
          class="mt-6"
        >
          <div
            class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
          >
            <div
              class="flex items-center justify-between space-x-4"
            >
              <div
                class="flex flex-grow items-center space-x-4"
              >
                <div
                  class="css-1atxdzc"
                  height="40"
                  width="40"
                >
                  <svg
                    id="extension-json"
                    viewBox="0 0 40 40"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M15 29v8a2 2 0 0 1-2 2h-2m12-10h-2.002a1.999 1.999 0 0 0-1.997 2c0 3 3.995 3 3.995 6 0 1.105-.894 2-1.998 2H19m10-10c-1.104 0-1.999.899-2 2.009v6.021A2.005 2.005 0 0 0 29.039 39 2.005 2.005 0 0 0 31 37.03v-6.025A2.004 2.004 0 0 0 29 29zm6 10V29l4 10V29"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                      fill="none"
                      stroke="#289548"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
                <div
                  class="w-0 flex-1 truncate font-semibold"
                >
                  export
                </div>
              </div>
              <div
                class="flex h-6 w-6 shrink-0 items-center justify-center rounded-full bg-theme-danger-200 text-theme-danger-500"
              >
                <div
                  class="css-15txs7d"
                  height="10"
                  width="10"
                >
                  <svg
                    id="cross-small"
                    viewBox="0 0 10 10"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M1 9l8-8M9 9L1 1"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-gu3ikl"
        >
          <button
            class="css-6419sw"
            data-testid="ImportError__cancel"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Cancel
            </div>
          </button>
          <button
            class="css-fl4fi0"
            data-testid="ImportError__retry"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              Retry
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should successfully import json profile 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name export is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
      >
        <div
          class="flex items-center justify-between space-x-4"
        >
          <div
            class="flex flex-grow items-center space-x-4"
          >
            <div
              class="css-1atxdzc"
              height="40"
              width="40"
            >
              <svg
                id="extension-json"
                viewBox="0 0 40 40"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M15 29v8a2 2 0 0 1-2 2h-2m12-10h-2.002a1.999 1.999 0 0 0-1.997 2c0 3 3.995 3 3.995 6 0 1.105-.894 2-1.998 2H19m10-10c-1.104 0-1.999.899-2 2.009v6.021A2.005 2.005 0 0 0 29.039 39 2.005 2.005 0 0 0 31 37.03v-6.025A2.004 2.004 0 0 0 29 29zm6 10V29l4 10V29"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <path
                  d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                  fill="none"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <div
              class="w-0 flex-1 truncate font-semibold"
            >
              export
            </div>
          </div>
          <div
            class="css-1ppx3l2"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;

exports[`Import Profile - Processing import > should successfully import wwe profile 1`] = `
<div>
  <div
    class="mx-auto max-w-xl"
    data-testid="ProcessingImport"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Import Profile
        </h1>
        <div
          class="flex items-center text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          The file with name profile.wwe is being imported.
        </div>
      </div>
    </div>
    <div
      class="mt-6 sm:mt-8"
    >
      <div
        class="rounded-lg border-2 border-theme-secondary-200 p-4 dark:border-theme-secondary-800"
      >
        <div
          class="flex items-center justify-between space-x-4"
        >
          <div
            class="flex flex-grow items-center space-x-4"
          >
            <div
              class="css-1atxdzc"
              height="40"
              width="40"
            >
              <svg
                id="extension-wwe"
                viewBox="0 0 40 40"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M7.757 37H3.598C2.17 37 1 35.898 1 34.55V3.45C1 2.101 2.17 1 3.469 1h17.929c.78 0 1.298.245 1.818.735l10.004 9.428c.52.49.78 1.102.78 1.715v7.347"
                  fill="none"
                  stroke="#289548"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M22 29v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                  />
                  <path
                    d="M26 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.253 2-6.604V29m7 10h-2a2.002 2.002 0 0 1-2-2.001v-6A2 2 0 0 1 35 29h2m-4 6h4m-26-6v3.396c0 2.35.696 4.648 2 6.604 1.31-1.978 2.004-3.664 2-6"
                  />
                  <path
                    d="M15 33c0 2.35.697 4.044 2 5.999 1.304-1.956 2-4.254 2-6.604V29"
                  />
                </g>
              </svg>
            </div>
            <div
              class="w-0 flex-1 truncate font-semibold"
            >
              profile.wwe
            </div>
          </div>
          <div
            class="css-1ppx3l2"
            color="info"
          />
        </div>
      </div>
    </div>
    <div
      class="items-left text-left"
    />
  </div>
</div>
`;
